--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,3 +36,7 @@ a {
 .primary-button {
   @apply rounded bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500;
 }
+
+.main-prod-image {
+  border: 1px solid gray
+}
