--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,7 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  @apply text-blue-600 hover:text-blue-800;
 }
 
 * {
@@ -38,11 +37,15 @@ a {
 }
 
 .main-prod-image {
-  border: 1px solid gray
+  border: 1px solid gray;
 }
 
 input,
 select,
 textarea {
   @apply rounded border p-2 outline-none ring-indigo-300 focus:ring;
+}
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-gray-200;
 }
