--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,19 +111,22 @@ textarea {
 }
 
 .variant-admin-img-wrapper label {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   cursor: pointer;
+  height: 200px; /* add fixed height */
 }
 
 .variant-admin-img-wrapper label::before {
   content: "";
   display: block;
   position: absolute;
-  top: -5px;
-  left: -5px;
-  width: calc(100% + 10px);
-  height: calc(100% + 10px);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   border-radius: 5px;
   border: 2px solid transparent;
 }
@@ -133,11 +136,12 @@ textarea {
 }
 
 .variant-admin-img-wrapper input[type="radio"]:checked + label img {
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 
 .variant-admin-img {
   width: 150px;
   object-fit: contain;
   transition: transform 0.2s ease-in-out;
+  max-height: 100%;
 }
