--- a/styles/globals.css
+++ b/styles/globals.css
@@ -151,6 +151,18 @@ textarea {
 }
 
 .large-img-prod {
-  max-height: 50vh% !important;
-  max-width: auto;
+  height: 50vh;
+  width: 50vh;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.selected-thumbnail {
+  transform: scale(1.2)
+}
+
+.description-prod p {
+  margin-bottom: 1.1em
 }
