--- a/styles/globals.css
+++ b/styles/globals.css
@@ -359,7 +359,6 @@ img[src$='#half-width'] {
   }
 }
 
-/* Media Query for Mobile */
 @media (max-width: 767px) {
   .navigation-menu-container {
     position: absolute;
@@ -372,4 +371,8 @@ img[src$='#half-width'] {
     justify-content: center;
     align-items: center;
   }
+}
+
+.prod-description p {
+  margin-bottom:.5rem
 }
