--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,12 +6,24 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Noto_Serif', Georgia, 'Times New Roman', serif;
   /* Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,  sans-serif, Oxygen, -apple-system, BlinkMacSystemFont, Segoe UI, ; */
 }
 
+h1 {
+  font-family: 'Alpha_Slab_One', serif;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+}
+
 a {
-  @apply text-blue-600 hover:text-blue-800;
+  /* @apply text-blue-600 hover:text-blue-800; */
 }
 
 .profile-menu {
@@ -41,7 +53,8 @@ a {
 }
 
 .primary-button {
-  @apply rounded text-white bg-green-500 py-2 px-4 shadow outline-none hover:bg-green-400 active:bg-green-500;
+  @apply rounded text-white py-2 px-4 shadow outline-none hover:bg-green-400 active:bg-green-500;
+  background-color: #09600F;
 }
 
 .default-button {
@@ -49,16 +62,20 @@ a {
 }
 
 .header-bg {
-  background-color: #111111;
-}
-
-.search-bar-bg {
-  background-color: #3C3C3C; 
+  background-color: #ffffff;
 }
 
 .header-text-color {
-  color: #ffffff;
+  color: #09600F;
 }
+
+.navbar-style {
+  background-color: #09600F;
+  border-top: solid white 1px;
+  color: #ffffff !important;
+}
+
+
 
 .search-input {
   flex-grow: 1;
@@ -323,6 +340,10 @@ button[type="submit"]:hover {
   background-color: #005ecc;
 }
 
+.button-color {
+  background-color: #09600F
+}
+
 .continue-button-container {
   display: flex;
   justify-content: center;
@@ -377,3 +398,6 @@ img[src$='#half-width'] {
   margin-bottom:.5rem
 }
 
+.page-content p {
+  margin-bottom: 1.5rem
+}
