--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,23 +1,31 @@
 @font-face {
-    font-family: 'Alpha_Slab_One';
-    src: url('../public/Alfa_Slab_One/AlfaSlabOne-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: 'Poppins';
-    src: url('../public/Poppins/Poppins-ExtraBold.ttf') format('truetype');
-    font-weight: 800;
-    font-style: normal;
-    font-display: swap;
-  }
-  
-  @font-face {
-    font-family: 'Noto_Serif';
-    src: url('../public/Noto_Serif/NotoSerif-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-  }
+  font-family: 'Alpha_Slab_One';
+  src: url('../public/Alfa_Slab_One/AlfaSlabOne-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../public/Poppins/Poppins-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Noto_Serif';
+  src: url('../public/Noto_Serif/NotoSerif-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ProzaLibre';
+  src: url('../public/ProzaLibre/ProzaLibre-Medium.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
