--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,16 @@
 @tailwind utilities;
 
 html,
-body {
+body,
+.body-text {
   padding: 0;
   margin: 0;
   font-family: 'ProzaLibre', Georgia, 'Times New Roman', serif;
   /* Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,  sans-serif, Oxygen, -apple-system, BlinkMacSystemFont, Segoe UI, ; */
 }
 
-h1 {
+h1,
+.head-text {
   font-family: 'Alpha_Slab_One', serif;
 }
 
@@ -18,13 +20,15 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.subhead-text {
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
 }
 
 a {
   /* @apply text-blue-600 hover:text-blue-800; */
 }
+
 
 .profile-menu {
   z-index: 2;
